k8s/ingress/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-radar-backend-ingress
spec:
  rules:
    - host: reviewradar.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: review-radar-backend-service
                port:
                  number: 5001
