k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewradar-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: review-radar-backend-service
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: review-radar-frontend-service
                port:
                  number: 3000
